# dotfiles

./: .Brewfile  .Brewfile.games  .ctags  .emacs  .gitconfig  .githelpers  .gitignore  .globalrc  .liftoffrc  .spacemacs  .spacemacs.d  .tmux.conf  .vimrc  AGENTS.md  README.md  install.zsh  pull-branch.rb  push-current-branch.rb  pyproject.toml  requirements.in  requirements.txt  set-upstream.rb  tasks.py
.Brewfiles/: base  base.lock.json  core  core.lock.json  essential  games
.archive/: .ctags  .globalrc  README.md
.archive/.Brewfiles/: core  optional
.archive/.spacemacs.d/: .spacemacs.env  configuration.el  configuration.org  init.el
.bin/: .gitignore  battery-usage  emacs-spacemacs  git-activity  spacemacs
.claude/: CLAUDE.md  settings.json  statusline-command.sh
.config/ghostty/: README.md  all-themes.txt  config  generate-themes-yaml.py  mise.toml  pick-theme.py  pyproject.toml  themes.yaml
.config/ghostty/auto/: theme.ghostty
.config/ghostty/theme_picker/: __init__.py  cli.py  config.py  core.py  data.py
.config/ghostty/theme_picker/tests/: __init__.py  test_core.py
.emacs.d/: AGENTS.md  README.md  configuration.org  custom.el  early-init.el  evil.el  init.el  packages.el  ui.el
.emacs.d.nickTD/: init.el
.spacemacs/: .spacemacs
.spacemacs.d/: configuration.org  init.el
.vim/: autocmds.vim  easy-motion.vim  fastlane.vim  fzf.vim  mappings.vim  neomake.vim  plugin-settings.vim  plugins.vim  settings.vim  swift.vim  tagbar.vim  vundle-plugins.vim
docs/: fish_prompt_hostname.md
sandbox-profiles/: profiling.sb  simplify-trace
(+154 files in other folders)
