[project]
name = "ghostty-theme-picker"
version = "0.1.0"
description = "A TUI theme picker for Ghostty"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
ghostty-theme-picker = "theme_picker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["theme_picker"]
